--- a/src/home/items opened/itemsdetails.css
+++ b/src/home/items opened/itemsdetails.css
@@ -191,5 +191,7 @@
     justify-content: center; /* Center the buttons horizontally */
     margin-top: 10px;
   }
-  
+  .imgdetailsprodsimgs {
+    width: 300px;
+  }
 }  
