--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -22,6 +22,7 @@
       background-color: #ffffff; /* Adjust background color as needed */
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
       z-index: 1;
+      color: black;
     }
     
     .dropmentlogomainpage {
@@ -44,6 +45,7 @@
       border: none;
       cursor: pointer;
       font-size: medium;
+      color: black;
     }
     
     .createstorebtnmainpg {
