--- a/src/home/custom-shop/csb.css
+++ b/src/home/custom-shop/csb.css
@@ -51,13 +51,14 @@
   .step1buildheader h1 {
     text-align: center;
     font-weight: 300;
+    color: white;
   }
   .select-nav-bar-build-shop {
-    padding: 10px;
+    padding: 10px 20px;
     border-radius: 15px;
-    border: 2px solid #833ab4;
-    background-color: #833ab4;
-    color: #fff;
+    border: 2px solid #ffffff;
+    background-color: #ffffff;
+    color: #000000;
     display: flex; /* Create a flex container */
     justify-content: center; /* Center content horizontally */
     align-items: center; /* Center content vertically */
@@ -68,8 +69,8 @@
     background-color: transparent;
     transition: 0.3s;
     border-radius: 25px;
-    color: black;
-    border: 2px solid #833ab4;
+    color: rgb(255, 255, 255);
+    border: 2px solid #ffffff;
   }
   .formheadertextcustomshop {
     text-align: center;
@@ -80,3 +81,14 @@
   .formheadertextcustomshop p {
     font-weight: 100;
   }
+  @import url('https://fonts.googleapis.com/css?family=San+Francisco&display=swap');
+  .main-div-builder {
+    font-family: 'San Francisco', sans-serif;
+  /* Other global styles */
+  background-color: #000000;
+  }
+
+  body{
+    font-family: 'San Francisco', sans-serif;
+  }
+
