--- a/src/home/custom-shop/headers-parts/headers.css
+++ b/src/home/custom-shop/headers-parts/headers.css
@@ -949,7 +949,7 @@
     /*header1*/
     .header1-build header{
         display: flex;
-        margin-top: 50px;
+        margin-top: 50px
     }
     .imgsheadersection1-build img {
         width: cover;
@@ -963,12 +963,12 @@
     }
     .textheadersection1-build h1 {
         font-size: x-large;
-        color: #0d1321;
+        color: #ffffff;
         font-weight: 300;
         width: 200px;
     }
     .textheadersection1-build h2 {
-        color: #d90429;
+        color: #ffffff;
         font-size: xx-large;
         font-weight: 100;
         margin-top: 30px;
@@ -1065,7 +1065,7 @@
 
     /*header 3 preview*/
     .header3-preview {
-      background-image: url('../../header/images/Untitled\ design\ \(8\).png'); /* Add your background image path */
+      background-image: url('../../header/images/Untitled\ design\ \(6\).png'); /* Add your background image path */
       background-size: cover;
       background-position: center;
       height: 100vh;
@@ -1198,6 +1198,7 @@
       margin-left: 100px;
       text-align: center;
       margin-top: 50px;
+      color: white;
     }
     .hero-section2-header5-preview h1 {
       font-size: 80px;
@@ -1207,8 +1208,8 @@
       font-size: 20px;
     }
     .hero-section2-header5-preview button {
-      background-color: black;
-      color: #fff;
+      background-color: rgb(255, 255, 255);
+      color: #000000;
       border-radius: 15px;
       border: 2px solid black;
       padding: 15px 20px;
