--- a/src/home/adminview/adminview.css
+++ b/src/home/adminview/adminview.css
@@ -1,4 +1,5 @@
   /* Style adjustments for OrdersComponent and SalesReportApp if needed */
+  @media (min-width: 1025px) {
   .OrdersComponent {
     background-color: #333;
     color: white;
@@ -164,3 +165,441 @@
       margin: 10px 30px;
       cursor: pointer;
     }
+  }
+  @media (min-width: 312px) and (max-width: 480px){
+    .total-visits {
+      text-align: center;
+      margin: 20px;
+    }
+    .total-visits {
+      margin: 10px;
+      /* Adjust styles for smaller screens */
+    }
+    .total-visits h2 {
+      font-size: 24px; /* Adjust heading size */
+    }
+    .total-visits h4 {
+      font-size: 18px; /* Adjust subheading size */
+    }
+    .total-visits {
+      background-color: #f9fafb;
+      padding: 20px;
+      text-align: center;
+      border-radius: 5px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+    .total-visits h2 {
+      margin-top: 0;
+      font-size: 20px;
+      color: #333333;
+    }
+    .total-visits h4 {
+      margin-bottom: 0;
+      font-size: 36px;
+      color: #007bff;
+      text-align: center;
+    }
+    /*order table*/
+    .orders-admin-prods {
+      padding: 20px;
+      overflow-x: auto; /* Allow horizontal scroll for smaller screens */
+    }
+    
+    /* Table styles */
+    .orders-admin-prods table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
+    }
+    
+    .orders-admin-prods th, td {
+      padding: 8px;
+      text-align: left;
+    }
+    
+    .orders-admin-prods th {
+      background-color: #17182A;
+    }
+    .orders-admin-prods table {
+      overflow-x: auto;
+      display: block;
+      background-color: #17182A;
+      color: white;
+    }
+  
+    .orders-admin-prods th, td {
+      white-space: nowrap;
+      min-width: 100px;
+    }
+  
+    .orders-admin-prods th:first-child,
+    .orders-admin-prods td:first-child {
+      min-width: 150px; /* Adjust the first column width */
+    }    
+
+    /*products*/
+    .products-list {
+      padding: 20px;
+    }
+    
+    .inventory-table {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-gap: 5px;
+    }
+    
+    .table-header,
+    .table-row {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      align-items: center;
+      padding: 5px 0;
+    }
+    
+    .table-row {
+      border: 1px solid #ccc;
+    }
+    
+    .product-image {
+      width: 80px;
+      height: auto;
+    }
+    .inventory-table,
+    .table-header,
+    .table-row {
+      grid-template-columns: 1fr;
+    }
+    .table-header{
+      display: none;
+    }
+    .table-row {
+      border: none;
+      padding: 10px 0;
+      text-align: center;
+      border: 2px solid black;
+      border-radius: 15px;
+    }
+  
+    .product-image {
+      width: 100%; /* Adjust image width to fit the container */
+    }
+  
+    .delete-button {
+      margin-top: 5px;
+      background-color: #ff4d4f;
+      color: white;
+      margin-left: 4px;
+      border: transparent;
+    }
+  }
+  @media (min-width: 481px) and (max-width: 768px) {
+    .total-visits {
+      text-align: center;
+      margin: 20px;
+    }
+    .total-visits {
+      margin: 10px;
+      /* Adjust styles for smaller screens */
+    }
+    .total-visits h2 {
+      font-size: 24px; /* Adjust heading size */
+    }
+    .total-visits h4 {
+      font-size: 18px; /* Adjust subheading size */
+    }
+    .total-visits {
+      background-color: #f9fafb;
+      padding: 20px;
+      text-align: center;
+      border-radius: 5px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+    .total-visits h2 {
+      margin-top: 0;
+      font-size: 20px;
+      color: #333333;
+    }
+    .total-visits h4 {
+      margin-bottom: 0;
+      font-size: 36px;
+      color: #007bff;
+      text-align: center;
+    }
+    /*order table*/
+    .orders-admin-prods {
+      padding: 20px;
+      overflow-x: auto; /* Allow horizontal scroll for smaller screens */
+    }
+    
+    /* Table styles */
+    .orders-admin-prods table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
+    }
+    
+    .orders-admin-prods th, td {
+      padding: 8px;
+      text-align: left;
+    }
+    
+    .orders-admin-prods th {
+      background-color: #17182A;
+    }
+    .orders-admin-prods table {
+      overflow-x: auto;
+      display: block;
+      background-color: #17182A;
+      color: white;
+    }
+  
+    .orders-admin-prods th, td {
+      white-space: nowrap;
+      min-width: 100px;
+    }
+  
+    .orders-admin-prods th:first-child,
+    .orders-admin-prods td:first-child {
+      min-width: 150px; /* Adjust the first column width */
+    }    
+    
+    /*products*/
+    .products-list {
+      padding: 20px;
+    }
+    
+    .inventory-table {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-gap: 5px;
+    }
+    
+    .table-header,
+    .table-row {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      align-items: center;
+      padding: 5px 0;
+    }
+    
+    .table-row {
+      border: 1px solid #ccc;
+    }
+    
+    .product-image {
+      width: 80px;
+      height: auto;
+    }
+    .inventory-table,
+    .table-header,
+    .table-row {
+      grid-template-columns: 1fr;
+    }
+    .table-header{
+      display: none;
+    }
+    .table-row {
+      border: none;
+      padding: 10px 0;
+      text-align: center;
+      border-radius: 15px;
+    }
+  
+    .product-image {
+      width: 150px; /* Adjust image width to fit the container */
+    }
+  
+    .delete-button {
+      margin-top: 5px;
+      background-color: #ff4d4f;
+      color: white;
+      margin-left: 4px;
+      border: transparent;
+    }
+  }
+  @media (min-width: 769px) and (max-width: 1024px){
+    .OrdersComponent {
+      background-color: #333;
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+      width: fit-content;
+    }
+    
+    .SalesReportApp {
+      background-color: #333;
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+      width: fit-content;
+    }
+    .header-overview-shop img {
+      width: 70px;
+    }
+    .header-overview-shop header {
+      padding: 20px;
+      background-size: cover;
+    }
+  
+    /*overview*/
+    .header-overview-shop {
+        background-color: #ffffff;
+        padding: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .header-overview-shop header img {
+        max-width: 200px;
+        height: auto;
+      }
+      .dashboard-container {
+        margin: 20px;
+        padding: 20px;
+        background-color: #ffffff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+      .data-components {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 20px;
+      }
+      .total-visits {
+        background-color: #f9fafb;
+        padding: 20px;
+        text-align: center;
+        border-radius: 5px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        text-align: center;
+      }
+      .total-visits h2 {
+        margin-top: 0;
+        font-size: 20px;
+        color: #333333;
+      }
+      .total-visits h4 {
+        margin-bottom: 0;
+        font-size: 36px;
+        color: #007bff;
+        text-align: center;
+      }
+      .total-result-admin-view {
+        margin-top: 20px;
+        padding: 10px;
+        background-color: #ffffff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+      .total-result-admin-view p {
+        margin: 0;
+        font-size: 16px;
+        color: #333333;
+      }
+      .left-align {
+        float: left; /* Or use flexbox/grid positioning or any other desired CSS layout */
+      }
+      .dashboard-container h1 {
+        text-align: center;
+      }
+      
+      .inventory-table {
+        border-collapse: collapse;
+        width: 100%;
+      }
+      
+      .table-header {
+        background-color: #f5f5f5;
+        font-weight: bold;
+        display: flex;
+      }
+      
+      .table-header > div {
+        padding: 10px;
+        flex: 1;
+        text-align: center;
+      }
+      
+      .table-header > div:last-child {
+        border-right: none;
+      }
+      
+      .table-row {
+        display: flex;
+        align-items: center;
+      }
+      
+      .table-row > div {
+        padding: 10px;
+        flex: 1;
+        text-align: center;
+      }
+      
+      .product-image {
+        max-width: 40px;
+        max-height: 40px;
+        display: block;
+        margin: auto;
+      }
+      
+      .delete-button {
+        background-color: #ff4d4f;
+        color: white;
+        border: none;
+        padding: 5px 10px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        margin-left: 3px;
+        margin-top: 3px;
+      }
+      
+      .delete-button:hover {
+        background-color: #d93636;
+      }
+  
+      .header-overview-shop button {
+        background-color: transparent;
+        font-size: 18px;
+        border: transparent;
+        margin: 10px 30px;
+        cursor: pointer;
+      }
+      .orders-admin-prods {
+        padding: 20px;
+        overflow-x: auto; /* Allow horizontal scroll for smaller screens */
+      }
+      
+      /* Table styles */
+      .orders-admin-prods table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-bottom: 20px;
+      }
+      
+      .orders-admin-prods th, td {
+        padding: 8px;
+        text-align: left;
+      }
+      
+      .orders-admin-prods th {
+        background-color: #17182A;
+      }
+      .orders-admin-prods table {
+        overflow-x: auto;
+        display: block;
+        background-color: #17182A;
+        color: white;
+      }
+    
+      .orders-admin-prods th, td {
+        white-space: nowrap;
+        min-width: 100px;
+      }
+    
+      .orders-admin-prods th:first-child,
+      .orders-admin-prods td:first-child {
+        min-width: 150px; /* Adjust the first column width */
+      }    
+      
+  }
