--- a/src/home/mainpage/mainpage.css
+++ b/src/home/mainpage/mainpage.css
@@ -326,28 +326,26 @@
     
     .dropmentmainheader {
       width: 100%;
-      background-color: #ffffff; /* Adjust background color as needed */
+      background-color: #ffffff;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
       z-index: 1;
       color: black;
-    }
-    
-    .dropmentlogomainpage {
-      margin-right: 0px;
+      padding: 10px 0; /* Adjust padding as needed */
     }
     
     .dropmentlogomainpage img {
-      max-height: 80px; /* Adjust as needed */
+      max-height: 60px; /* Adjust as needed */
     }
     
     .dropmentmainbtns {
       display: flex;
       justify-content: center;
       align-items: center;
+      margin-top: 10px; /* Adjust margin as needed */
     }
     
     .dropmentmainbtns button {
-      margin-left: 10px;
+      margin: 0 8px; /* Adjust margin as needed */
       background-color: transparent;
       border: none;
       cursor: pointer;
@@ -364,63 +362,53 @@
       justify-content: center;
       align-items: flex-start;
       width: 100%;
-      padding: 20px;
+      padding: 20px 0; /* Adjust padding as needed */
     }
     
     .content-container {
       display: flex;
-      justify-content: center;
+      justify-content: space-around; /* Adjust as needed */
       align-items: flex-start;
       width: 100%;
-      max-width: 1200px; /* Adjust as needed */
+      max-width: 1200px;
     }
     
-    .left-content {
+    .left-content,
+    .right-content {
       flex: 1;
       max-width: 300px; /* Adjust as needed */
-      margin-right: 20px;
+      margin: 0 10px; /* Adjust margin as needed */
     }
     
     .middle-content {
       flex: 3;
     }
     
-    .right-content {
-      flex: 1;
-      max-width: 300px; /* Adjust as needed */
-      margin-left: 20px;
-    }
     .recomprofilemainpagetxtp {
       color: grey;
       text-align: center;
     }
-    .recomprofilemainpagetxt {
-      color: grey;
-      text-align: left;
-      margin-left: 19px;
-    }
+    
     .blinkfeed-btn-main-pg button {
-      background-color: #3A0299;
+      background-color: #3a0299;
       color: white;
-      border: 2px solid #3A0299;
+      border: 2px solid #3a0299;
       border-radius: 25px;
       padding: 10px 20px;
       margin-top: 10px;
+      transition: background-color 0.3s, color 0.3s, border-color 0.3s;
     }
+    
     .blinkfeed-btn-main-pg button:hover {
       background-color: transparent;
-      color: #3A0299;
-      border: 2px solid #3A0299;
-      transition: 0.3s;
+      color: #3a0299;
     }
+    
     .add-shop-btn-main-page-dropment button {
       color: white;
-      background-color: #3A0299;
-      border: 2px solid #3A0299;
+      background-color: #3a0299;
+      border: 2px solid #3a0299;
       border-radius: 9px;
       padding: 10px 20px;
-      align-items: center;
     }
-    
-    
   }
