--- a/src/home/custom-shop/customshop.css
+++ b/src/home/custom-shop/customshop.css
@@ -261,3 +261,17 @@
         transition: 0.3s;
     }
 }
+.publish-web-btn {
+    background-color: #8ac926;
+    color: white;
+    border: 2px solid #8ac926;
+    padding: 10px 30px;
+    border-radius: 9px;
+}
+.st-bg-clr-previrew-custom-shop {
+    background-color: #a5a7a3;
+    color: rgb(255, 255, 255);
+    border: 2px solid #b7b8b7;
+    padding: 10px 30px;
+    border-radius: 9px;
+}
